# mac-afk.py

./: .travis.yml  README.md  package.json  requirements.txt  requires.txt  setup.cfg  setup.py
mac_afk/: __init__.py  days.py  hours.py  minutes.py  seconds.py
scripts/: afk
tests/mac-afk/examples/: seconds.py
