[metadata]
name = mac-afk
version = 0.0.0
url = https://github.com/looking-for-a-job/mac-afk.py
classifiers = file: classifiers.txt
description = afk time in seconds
long_description = file: README.md
long_description_content_type = text/markdown
keywords = afk

[options]
install_requires = 
	mac-afk-cli
	public
	runcmd
	setuptools
packages = 
	mac_afk
