# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = mac-afk
version = 2019.03.01
url = https://github.com/looking-for-a-job/mac-afk.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = afk

[options]
install_requires = 
	public
	setuptools
packages = 
	mac_afk
