# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-afk
version = 2019.4.18
url = https://github.com/looking-for-a-job/mac-afk.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = afk

[options]
install_requires = 
	public
	setuptools
scripts = 
	scripts/afk
packages = 
	mac_afk
